# TP_Front

./: .env  README.md  TP-Back-flask-24262-Grupo02.env  index.html  integrantes.html  login.html  politicas.html  pyproject.toml  registro.html  render.yaml
Front/: contacto.html  integrantes.html
Front/css/: contacto.css  politicas.css
Front/js/: valid-login.js  valid-registro.js
css/: contacto.css  integrantes.css  login.css  registro.css  styles.css
js/: load-more.js  valid-contacto.js
src/: app.py  conf.py  databases.py  gconfig.py
src/static/: actor.html  actores.html  director.html  genero.html  index.html  integrantes.html  listar_actores.html  listar_directores.html  listar_generos.html  listar_peliculas.html  pelicula.html
src/static/css/: navbar2.css  style.css
src/static/js/: actor.js  actores.js  director.js  genero.js  listar_actores.js  listar_directores.js  listar_genero.js  listar_generos.js  listar_peliculas.js  navbar.js  pelicula.js
